# rpi-webrtc-streamer

./: .gitignore  CI_CD_SUMMARY.md  Cargo.toml  Cross.toml  FINAL_COMPARISON.md  IMPROVEMENTS_SUMMARY.md  MACOS_TESTING.md  MEMORY_LEAK_FIXES.md  Makefile  QUICK_START.md  README.md  REFACTORING.md  Report.md  TESTING_SUMMARY.md  config.toml  cross_docker_container.sh  debug_memory.sh  init_cam.sh  monitor_memory.sh  streamer.py
.cargo/: config.toml
.github/workflows/: README.md  build-arm.yml  deploy-check.yml  rust-tests.yml
deploy/: deploy.sh  rpi_sensor_streamer.service
go/: .gitignore  CHANGES.md  DEPLOYMENT.md  Dockerfile.go.cross  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MJPEG_RTP_README.md  Makefile  QUICKSTART.md  README.md  TESTING.md  build-go-docker.sh  config.toml  go.Makefile  go.mod  go.sum  integration_test.go  main.go
go/camera/: capture.go  encoder.go  manager.go
go/config/: config.go  config.toml  config_test.go
go/deploy-go/: .deploy-go  deploy-go.sh  pi-camera-streamer.service  update-config.sh
go/integration/: README.md  macos_rtp_e2e_test.go  macos_test.go  macos_video_test.go  profile_test.go  record_video.sh  run_ffplay_preview.sh  run_macos_test.sh  test_rtp_pipeline.sh
go/mjpeg/: capture.go  manager.go  manager_test.go  rtp_packetizer.go  rtp_packetizer_test.go  streamer.go  streamer_test.go
go/web/: handlers.go  server.go  viewer.html
go/web/static/: index.js
go/webrtc/: peer.go  peer_test.go  server.go  server_test.go  signaling.go  signaling_test.go
python-client/: IMPLEMENTATION_SPEC.md
rust/: Cargo.toml  Dockerfile.cross  Makefile  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  REFACTORING.md  REFACTORING_PLAN.md  RUST_ARCHITECTURE_V2.md  TESTING.md  config.example.toml  config.toml
rust-mjpeg-rtp/: Cargo.toml  FINAL_PROFILING_RESULTS.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_COMPARISON.md  PROFILING_ANALYSIS.md  README.md  REAL_PERFORMANCE_COMPARISON.md  TEST_RESULTS.md  config.example.toml
rust-mjpeg-rtp/.cargo/: config.toml
rust-mjpeg-rtp/benches/: capture_pipeline.rs  rtp_packetizer.rs
rust-mjpeg-rtp/scripts/: test_full_pipeline.sh
rust-mjpeg-rtp/src/: config.rs  lib.rs  main.rs
rust-mjpeg-rtp/src/capture/: mod.rs  platform.rs
rust-mjpeg-rtp/src/rtp/: jpeg.rs  jpeg_parser.rs  mod.rs  packet.rs
rust-mjpeg-rtp/src/streamer/: mod.rs  stats.rs
rust-mjpeg-rtp/tests/: e2e_rtp_pipeline.rs  macos_integration_test.rs  profile_test.rs  rtp_packetizer_test.rs  test_rtp_output.rs
rust/deploy/: .deploy  deploy.sh
rust/deploy-rust/: .deploy-rust  deploy-rust.sh  rpi-sensor-streamer-rust.service
rust/src/: config.rs  gst_webrtc.rs  main.rs  web.rs
rust/src/processing/: mod.rs
rust/src/sensors/: lidar.rs  mod.rs
rust/src/streaming/: frame_distributor.rs  mod.rs  pipeline.rs  session.rs  webrtc_streamer.rs
rust/src/webrtc/: README.md  client.rs  codec.rs  mod.rs  pipeline.rs  raii_guards.rs
rust/tests/: QUICKSTART.md  integration_test.rs  run_all_tests.sh  test_config.toml  validate_tests.sh
rust/tests/browser/: demo-test.js  package.json  test-webrtc.js
src/: config.rs  gst_webrtc.rs  main.rs  web_server.rs
src/camera/: mod.rs
src/processing/: mod.rs
src/sensors/: icm20948.rs  lidar.rs
src/streaming/: mod.rs  video_control.rs  webrtc_streamer.rs
src/webrtc/: client.rs  codec.rs  mod.rs  pipeline.rs
web/: index.html  viewer.html  webrtc-test.html
