[package]
name = "rpi_sensor_streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.18.0"
zeromq = "0.4.0"
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.3"
tokio = { version = "1", features = ["full"] }
v4l = "0.14.0"
toml = "0.8.14"
tokio-tungstenite = "0.27.0"
webrtc = "0.13.0"
futures-util = "0.3.30"
# openh264 = "0.8.1"
# yuv = "0.8.5"

# WebRTC and video dependencies
# v4l = "0.14.0"  # Commented out until needed - causes cross-compilation issues
