[package]
name = "rust-mjpeg-rtp"
version = "0.1.0"
edition = "2021"
authors = ["RPI WebRTC Streamer Team"]
description = "High-performance MJPEG-RTP streaming service for Raspberry Pi dual cameras"
license = "MIT"

[[bin]]
name = "mjpeg-rtp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Zero-copy buffers
bytes = "1.9"

# GStreamer bindings
gstreamer = "0.23"
gstreamer-app = "0.23"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
once_cell = "1.20"

# Memory allocator (better performance and lower memory footprint)
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[[bench]]
name = "rtp_packetizer"
harness = false

[[bench]]
name = "capture_pipeline"
harness = false
