[package]
name = "rpi_webrtc_streamer"
version = "2.0.0"
edition = "2021"
authors = ["Raspberry Pi WebRTC Streamer"]
description = "High-performance WebRTC streaming service for Raspberry Pi dual cameras"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# GStreamer for video pipeline
gstreamer = "0.22"
gstreamer-video = "0.22"
gstreamer-webrtc = "0.22"
gstreamer-sdp = "0.22"
gstreamer-app = "0.22"
glib = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
once_cell = "1.19"
parking_lot = "0.12"

# Raspberry Pi GPIO (optional for sensor support)
rppal = { version = "0.18.0", optional = true }

[features]
default = []
sensors = ["rppal"]
